Added channel list
Done:
+ Implemanted list of channels which contains all basic channel data
  and has functionality of picking channel.

TODO:
- favorite channel list

Test:
nWedia shield

Manual testing works fine. Still have an issue with internet connection,
so all tests are done without streaming.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">AndroidDeveloperTest</string>
+    <string name="app_name">RT-RK Live</string>
 
     <string name="rtrk_live">RT-RK\nLive</string>
+
+    <string name="channel_list">Channel list</string>
 </resources>
